<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Pila</string>

    <string name="newExpenseButtonText">New Expense</string>
    <string name="expensesListButtonText">Expenses List</string>
    <string name="aboutButtonText">About</string>

    <string name="expenseLabel">New Expense</string>
    <string name="valueText">Value</string>
    <string name="expenseAmountText">Amount</string>
    <string name="expenseTotalText">TOTAL</string>
    <string name="expenseTagsText">Tags</string>
    <string name="expenseSaveButtonText">Save</string>
    <string name="expenseSavedMessage">New expense saved.</string>

    <string name="expensesListLabel">Expenses List</string>
    <string name="expensesListEmpty">No expenses.</string>
    <string name="expensesListAddItemTitle">Add</string>
    <string name="expensesListRemoveItemTitle">Remove</string>

    <string name="aboutLabel">About Pila</string>

    <!-- About file URI (no translation needed)-->
    <string name="aboutUri">file:///android_asset/default/about.html</string>
</resources>
