<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valueText" />
    <EditText
            android:id="@+id/valueEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expenseAmountText" />
    <EditText
            android:id="@+id/amountEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="1.0"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expenseTotalText" />
    <EditText
            android:id="@+id/totalEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expenseTagsText"/>
    <MultiAutoCompleteTextView
            android:id="@+id/tagsEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenseSaveButtonText"/>
</LinearLayout>
