<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >
    <Button
            android:id="@+id/newExpenseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newExpenseButtonText" />
    <Button
            android:id="@+id/expensesListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expensesListButtonText"/>
    <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutButtonText"/>
</LinearLayout>
